# miniagent

./: .gitignore  README.md  REFERENCE.md  pyproject.toml
.github/workflows/: ci.yml
demos/: context-window-wall.txt  demo.tape  fix-failing-test.txt  read-grok-build.txt  self-modification.txt  stale-edit-did-not-fire.txt  verifier-experiment.txt
miniagent/: agent.py  cli.py  llm.py  safety.py  sessions.py  tools.py  verify.py
tests/: fakes.py  test_agent.py  test_cli.py  test_llm.py  test_safety.py  test_sessions.py  test_tools_edit.py  test_tools_read.py  test_verify.py
