[project]
name = "miniagent"
version = "0.1.0"
description = "The spine of a coding agent, annotated against xAI's grok-build"
requires-python = ">=3.14"
dependencies = ["litellm>=1.40", "typer>=0.12"]

[project.scripts]
miniagent = "miniagent.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools]
packages = ["miniagent"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length is handled by the formatter, not the linter
